--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -21,9 +21,8 @@
     <h1>Olá, Mundo!</h1>
     <p>Estou livre da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem') //alert: exibe um alerta na tela
-        window.confirm('Está gostando de JS?') //confirm: exibe uma tela de confimração 
-        window.prompt('Qual é seu nome?') //promp: exibe uma janela com uma caixa de texto 
+        var nome = window.prompt('Qual é seu nome?') //promp: exibe uma janela com uma caixa de texto 
+        window.alert('é um prazer te conhecer, ' + nome + '!') //concatenação 
     </script>
 </body>   
 </html> 
