--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -21,9 +21,12 @@
     <h1>Olá, Mundo!</h1>
     <p>Estou livre da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem') //alert: exibe um alerta na tela
-        window.confirm('Está gostando de JS?') //confirm: exibe uma tela de confimração 
-        window.prompt('Qual é seu nome?') //promp: exibe uma janela com uma caixa de texto 
+        var n1 = Number(window.prompt('digite um número: ')) //win.pro recebe string 
+        var n2 = Number(window.prompt('digite outro numero: '))
+        var s = n1 + n2 
+        window.alert(`a soma entre ${n1} e ${n2} é ${s} `) // template string 
+        // (number + number) + para adição
+        // (string + string) + para concatenação
     </script>
 </body>   
 </html> 
