--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
             background-color: rgb(158, 158, 241);
-            color: white;
+            color: blue;
         }
 
         h1 {
