--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -18,12 +18,14 @@
     </style>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
+    <h1 onclick="clickar()">Olá, Mundo!</h1>
     <p>Estou livre da maldição</p>
     <script>
+        function clickar() { 
         window.alert('Minha primeira mensagem') //alert: exibe um alerta na tela
         window.confirm('Está gostando de JS?') //confirm: exibe uma tela de confimração 
         window.prompt('Qual é seu nome?') //promp: exibe uma janela com uma caixa de texto 
+        }
     </script>
 </body>   
 </html> 
