--- a/aula14/aula14ex/ex017/modelo.html
+++ b/aula14/aula14ex/ex017/modelo.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="style.css">
 <body>
     <header>
-        <h1>titulo</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            testando
+            <p>Número: <input type="number" name="num" id="txtn"> <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p> 
+            
         </div>
         <div>
-
-        </div>
-        <div>
-            ola
-        </div>
+            <select name="Tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
+        </div>   
     </section>
     <footer>
         <p>&copy; raphaelnsilva</p>
