--- a/aula14/aula14ex/ex017/modelo.html
+++ b/aula14/aula14ex/ex017/modelo.html
@@ -17,7 +17,7 @@
         </div>
         <div>
             <select name="Tabuada" id="seltab" size="10">
-                <option>Digite um número acima</option>
+                <option>Digite um númuro acima</option>
             </select>
         </div>   
     </section>
