--- a/campo-de-teste/index.html
+++ b/campo-de-teste/index.html
@@ -9,23 +9,17 @@
     <script src="script/script.js"></script>
 </head>
 <body>
-
-    <header class="conteudo">
-        <h1>Estudos de JavaScript</h1>
-        <h2>site desenvolvido por Raphael</h2>
-        
-    </header>
-
-    <main>
-        <article>
-            <h1>window.alert</h1>
-            <p>Temos propriedades no JavaScript que exibem alertar em formato de caixa em seu navegador. Enttre as mais usadas temos</p>
-            <ul>
-                <li>window.alert</li>
-                <li>window.confirm</li>
-            </ul>
-            
-        </article>
-    </main>
+    <div>
+        <Div>
+            <h1>Modo Escuro muito fácil!</h1>
+        </Div>
+        <div>
+            <p>Como desenvolver seu sistema web, tendo o modo escuro como alternativa de vizualização!</p>
+            <p>Muito simples e com pouquissimo codigo!</p>
+            <label for="switch">
+                <input type="checkbox" id="switch"> Modo Escuro </input>
+            </label>
+        </div>
+    </div>
 </body>
 </html>
