--- a/exercicios/ex021/index.html
+++ b/exercicios/ex021/index.html
@@ -16,8 +16,8 @@
     </style>
 </head>
 <body>
-    <h1>Contando de 1 a 10</h1>
-    <button onclick="start()">Contar de 1 a 10</button>
+    <h1>Contando de 1 a 10 (marcando os pares)</h1>
+    <button onclick="start()">Contar de 1 a 10 </button>
     <section id="saida">
         <p>Aperte o botão acima para contar</p>
     </section>
