--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -16,25 +16,20 @@
     </style>
 </head>
 <body>
-    <h1>Contando de 1 a 10 (marcando os pares)</h1>
+    <h1>Contando de 1 a 10 (mostrando só os pares)</h1>
     <button onclick="iniciar()">Contar de 1 a 10</button>
     <p id="saida">Aperte o botão acima para contar</p>
      
     <script>
         function iniciar() {
             let saida = document.querySelector('#saida')
-            saida.innerHTML = `<h2>Contando de 1 até 10, marcando os pares</h2>`
 
-            let c = 0
-            while (c <= 10) {
-                if (c % 2 == 0) {
-                    saida.innerHTML += ` <mark><strong>${c}</strong></mark>`
-                } else {
-                    saida.innerHTML += ` ${c}`
-                }
-                c ++
+            saida.innerHTML += `<h2>Números pares de 1 até 10</h2>`
+            let cont = 2
+            while (cont <= 10 ) {
+                saida.innerHTML += ` <mark>${cont}</mark>`
+                cont += 2 //cont recebe cont = cont + 2
             }
-            
         }
     </script>
 </body>
