--- a/exercicios/ex003/index.html
+++ b/exercicios/ex003/index.html
@@ -16,8 +16,9 @@
     <button class="botao" onclick="clicou()">Clique para começar</button>
     <script>
         function clicou() {
-            var nome = window.prompt ('Qual é o seu nome?')
-            window.alert('Olá, é um prazer te conhecer '+ nome +'!')
+            let array = [window.prompt('qual é o seu nome?')]
+            
+            window.alert('Olá, é um prazer te conhecer '+ array[0] +'!')
         }
     </script>
 </body>
