--- a/exercicios/ex005/index.html
+++ b/exercicios/ex005/index.html
@@ -21,10 +21,13 @@
     <p id="resultado">O resultado vem aqui..</p>
 
     <script>
-        window.alert('Seja bem-vindo(a) ao meu site!')
-        var n = window.prompt ('Digite um número:')
-        var res = document.querySelector('#resultado')
-        res.innerHTML = `O dobro de ${n} é ${n*2} e metade é ${n/2}!`
+        function clicou() {
+            window.alert('Seja bem-vindo(a) ao meu site!')
+
+            let array = [Number(window.prompt('Digite um número:')), document.querySelector('#resultado')]
+            
+            array[1].innerHTML = `O dobro de ${array[0]} é ${array[0]*2} e metade é ${array[0]/2}!`
+        }
     </script>
 </body>
 </html>
