--- a/exercicios/ex011/index.html
+++ b/exercicios/ex011/index.html
@@ -22,24 +22,20 @@
 
     <script>
         function calcular() {
-            var nome = window.prompt('Qual é o nome do aluno?')
-            var n1 = Number(window.prompt('Qual foi sua primeira nota?:'))
-            var n2 = Number(window.prompt('Qual foi sua segunda nota?:'))
-            media = (n1 + n2)/2
-
-            var msg
+            let array = [window.prompt('Qual é o nome do aluno?'),  Number(window.prompt('Qual foi a primeira nota?')), Number(window.prompt('Qual foi a sua segunda nota?')), res = document.querySelector('#result')] //final
+            media = (array[1] + array[2])/2 // final
+            var msg // final
             if (media <= 5) {
                 msg = 'Estude mais um pouco!'
             } else {
                 msg = 'Meus parabéns!'
-            }
-
-            var res = document.querySelector('#result')
-            res.innerHTML = `<p>Calculando a média final de <mark>${nome}</mark></p>`
-            res.innerHTML += `<p>As notas obtidas foram <mark>${n1} e ${n2}</mark>.</p>`
-            res.innerHTML += `A média final será <mark>${media}</mark>.` 
-            res.innerHTML += `<p>A mensagem que temos é: <strong style='color:red;'>${msg}<strong></p>` 
-        }
+            } // final
+            array[3] = document.querySelector('#result')
+            array[3].innerHTML = `<p>Calculando a média final de <mark>${array[0]}</mark></p>`
+            array[3].innerHTML += `<p>As notas obtidas foram <mark>${array[1]} e ${array[2]}</mark>.</p>`
+            array[3].innerHTML += `A média final será <mark>${media}</mark>.` 
+            array[3].innerHTML += `<p>A mensagem que temos é: <strong style='color:red;'>${msg}<strong></p>` 
+        } 
     </script>
 </body>
 </html>
