--- a/exercicios/ex-analisador-de-numeros/index.html
+++ b/exercicios/ex-analisador-de-numeros/index.html
@@ -15,9 +15,9 @@
         <div>
             Numero (entre 1 e 100):
             <input type="number" name="phpnumero" id="numero">
-            <input type="button" value="Adicionar">
+            <input type="button" value="Adicionar" onclick="adicionar()">
             <br><br><select name="phplista" id="lista" size="6"></select>
-            <br><input type="button" value="Finalizar">
+            <br><input type="button" value="Finalizar" onclick="finalizar()">
         </div>
         <div id="res">
 
