--- a/campo-de-teste/index.html
+++ b/campo-de-teste/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de imagens</title>
-    <link rel="stylesheet" href="estilos/style.css">
-    <script src="script/script.js"></script>
+    <title>teste</title>
 </head>
 <body>
-    <div>
-        <Div>
-            <h1>Modo Escuro muito fácil!</h1>
-        </Div>
-        <div>
-            <p>Como desenvolver seu sistema web, tendo o modo escuro como alternativa de vizualização!</p>
-            <p>Muito simples e com pouquissimo codigo!</p>
-            <label for="switch">
-                <input type="checkbox" id="switch"> Modo Escuro </input>
-            </label>
-        </div>
-    </div>
+    
 </body>
 </html>
