--- a/Udemy/exercicios/secao-3-exercícios-sobre-tipos-de-dados/ex02/index.html
+++ b/Udemy/exercicios/secao-3-exercícios-sobre-tipos-de-dados/ex02/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antes e depois</title>
-    <script src="index.js" defer></script>
+    <title>ex02</title>
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1>Antecessor e Sucessor</h1>
-    <button id="button">Antecessor e sucessor</button>
+    
 </body>
 </html>
