--- a/Udemy/exercicios/secao-4/Math/index.html
+++ b/Udemy/exercicios/secao-4/Math/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ex05</title>
+    <title>Function built-in Math</title>
     <script src="script.js"></script>
 </head>
 <body>
