--- a/Udemy/teste/index.html
+++ b/Udemy/teste/index.html
@@ -1,82 +1,16 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"/> <!--Font Awesome é uma biblioteca de icones-->
-    <script src="script.js" defer></script> <!--"defer" atributo para os arquivos serem  carregados após o html-->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width= , initial-scale=1.0">
+  <title>Teste</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="header-page">
-        <div>
-            <p>Developed by:</p>
-            <h1>@raphaum_</h1>
-        </div>
-    </div>
-    <div class="todo-container">
-        <div>
-            <header>
-                <h1>Lista de tarefas</h1>
-            </header>
-            <form id="todo-form"> <!-- const todoFor -->
-                <p>Adicionar Tarefa</p>
-                <div class="form-control">
-                    <input type="text" id="todo-input" placeholder="O que você vai fazer..."> <!--const todoInput-->
-                    <button type="submit">
-                        <i class="fa-thin fa-plus"></i>
-                    </button>
-                </div>
-            </form>
-            <form id="edit-form" class="hide"> <!--const editForm-->
-                <p>Edite sua tarefa:</p>
-                <div class="form-control">
-                    <input type="text" id="edit-input"> <!--const editInput-->
-                    <button type="submit">
-                        <i class="fa-solid fa-check"></i>
-                    </button>
-                </div>
-                <button id="cancel-edit-btn">Cancelar</button> <!--const cancelEditBtn-->
-            </form>
-            <div class="toolbar">
-                <div class="search">
-                    <h4>Pesquisar:</h4>
-                    <form>
-                        <input type="text" id="search-input" placeholder="Buscar...">
-                        <button id="erase-button">
-                            <i class="fa-solid fa-delete-left"></i>
-                        </button>
-                    </form>
-                </div>
-                <div class="filter">
-                    <h4>Filtrar:</h4>
-                    <select id="filter-select">
-                        <option value="all">Todos</option>
-                        <option value="done">Feitos</option>
-                        <option value="todo">A fazer</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-
-        <!--Lista do que será feito-->
-        <div id="todo-list"> <!--const todoList-->
-            <div class="todo">
-                <h3>Tarefa Teste </h3>
-                <section>
-                    <button class="finish-todo">
-                        <i class="fa-solid fa-check"></i>
-                    </button>
-                    <button class="edit-todo">
-                        <i class="fa-solid fa-pen"></i>
-                    </button>
-                    <button class="remove-todo">
-                        <i class="fa-solid fa-xmark"></i>
-                    </button>
-                </section>
-            </div>
-        </div>
+    <div>
+      <h1>Curso de javascript</h1>
+      somar numeros:
+      <input type="text">
     </div>
 </body>
 </html>
